--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
+    "express-session": "^1.17.1",
     "jquery": "^3.5.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
